--- a/.gitignore
+++ b/.gitignore
@@ -37,9 +37,9 @@ jspm_packages
 .node_repl_history
 
 # MY OWN RULES
-/build/
-/coverage/
+/build
+/coverage
 .DS_Store
 npm-debug.log
-/dist/
-/typings/
+/dist
+/typings
