--- a/package.json
+++ b/package.json
@@ -1,43 +1,39 @@
 {
-	"name": "@phrz/movie-ratings",
-	"description": "A proof of concept movie rating UI made with Angular 2",
-	"license": "Public Domain",
-	"repository": {
-	"type": "git",
-		"url": "https://github.com/phrz/gui-hw-3"
-	},
-	"scripts": {
-		"start": "tsc && concurrently \"tsc -w\" \"lite-server\" ",
-		"lite": "lite-server",
-		"postinstall": "typings install",
-		"tsc": "tsc",
-		"tsc:w": "tsc -w",
-		"typings": "typings"
-	},
-	"dependencies": {
-		"@angular/common": "~2.1.0",
-		"@angular/compiler": "~2.1.0",
-		"@angular/core": "~2.1.0",
-		"@angular/forms": "~2.1.0",
-		"@angular/http": "~2.1.0",
-		"@angular/platform-browser": "~2.1.0",
-		"@angular/platform-browser-dynamic": "~2.1.0",
-		"@angular/router": "~3.1.0",
-		"angular-in-memory-web-api": "~0.1.5",
-		"core-js": "^2.4.1",
-		"reflect-metadata": "^0.1.8",
-		"rxjs": "5.0.0-beta.12",
-		"systemjs": "0.19.39",
-		"zone.js": "^0.6.25",
-		"jquery": "3.1.1",
-		"bootstrap": "^3.3.7"
-	},
-	"devDependencies": {
-		"concurrently": "^3.0.0",
-		"del": "^2.2.2",
-		"gulp": "^3.9.1",
-		"lite-server": "^2.2.2",
-		"typescript": "^2.0.3",
-		"typings": "^1.4.0"
-	}
+  "name": "@phrz/movie-ratings",
+  "description": "A proof of concept movie rating UI made with Angular 2",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/phrz/gui-hw-3"
+  },
+  "scripts": {},
+  "dependencies": {
+    "@angular/common": "~2.1.0",
+    "@angular/compiler": "~2.1.0",
+    "@angular/core": "~2.1.0",
+    "@angular/forms": "~2.1.0",
+    "@angular/http": "~2.1.0",
+    "@angular/platform-browser": "~2.1.0",
+    "@angular/platform-browser-dynamic": "~2.1.0",
+    "@angular/router": "~3.1.0",
+    "@types/core-js": "^0.9.41",
+    "bootstrap": "^3.3.7",
+    "core-js": "^2.4.1",
+    "jquery": "3.1.1",
+    "reflect-metadata": "^0.1.8",
+    "rxjs": "^5.0.0-beta.12",
+    "systemjs": "0.19.39",
+    "zone.js": "^0.6.26"
+  },
+  "devDependencies": {
+    "@types/core-js": "^0.9.41",
+    "@types/node": "^7.0.12",
+    "browser-sync": "^2.18.8",
+    "concurrently": "^3.0.0",
+    "del": "^2.2.2",
+    "gulp": "^3.9.1",
+    "lite-server": "^2.2.2",
+    "typescript": "^2.0.3",
+    "typings": "^1.5.0"
+  }
 }
