--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "concurrently": "^3.0.0",
     "del": "^2.2.2",
     "gulp": "^3.9.1",
+    "gulp-typescript": "^3.1.6",
     "lite-server": "^2.2.2",
     "typescript": "^2.0.3",
     "typings": "^1.5.0"
