--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "type": "git",
     "url": "https://github.com/phrz/gui-hw-3"
   },
-  "scripts": {},
+  "scripts": {
+	  "serve": "node ./node_modules/gulp/bin/gulp.js serve"
+  },
   "dependencies": {
     "@angular/common": "~2.1.0",
     "@angular/compiler": "~2.1.0",
@@ -31,7 +33,8 @@
     "browser-sync": "^2.18.8",
     "concurrently": "^3.0.0",
     "del": "^2.2.2",
-    "gulp": "^3.9.1",
+    "gulp": "github:gulpjs/gulp#4.0",
+    "gulp-cli": "github:gulpjs/gulp-cli",
     "gulp-typescript": "^3.1.6",
     "lite-server": "^2.2.2",
     "typescript": "^2.0.3",
