None of this works

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "url": "https://github.com/phrz/gui-hw-3"
   },
   "scripts": {
-	  "serve": "node ./node_modules/gulp/bin/gulp.js serve"
+    "serve": "node ./node_modules/gulp/bin/gulp.js serve"
   },
   "dependencies": {
     "@angular/common": "~2.1.0",
@@ -30,14 +30,22 @@
   "devDependencies": {
     "@types/core-js": "^0.9.41",
     "@types/node": "^7.0.12",
+    "babel-preset-es2015": "^6.24.0",
     "browser-sync": "^2.18.8",
+    "concat": "^3.0.0",
     "concurrently": "^3.0.0",
     "del": "^2.2.2",
     "gulp": "github:gulpjs/gulp#4.0",
+    "gulp-babel": "^6.1.2",
     "gulp-cli": "github:gulpjs/gulp-cli",
+    "gulp-concat": "^2.6.1",
     "gulp-typescript": "^3.1.6",
-    "lite-server": "^2.2.2",
+    "gulp-uglify": "^2.1.2",
+    "pump": "^1.0.2",
+	"systemjs": "^0.20",
+    "systemjs-builder": "^0.16.4",
     "typescript": "^2.0.3",
-    "typings": "^1.5.0"
+    "uglify": "^0.1.5",
+    "uglify-js": "^2.8.21"
   }
 }
